@@ -1,3 +1,4 @@
+- MANTA-232 filter large SVs with no read pair support
 - MANTA-236 expand conditions for large insertion search to normalize
 BWA-mem/Isaac performance
 - MANTA-231 expand scoring phase split read search around breakends to
